Bevel object from different scene won't automatically update generated bezier curve geometry #44213

Closed
opened 2015-04-01 02:10:25 +02:00 by Duarte Farrajota Ramos · 25 comments

System Information
Windows 7 64bits NVidia GTX 580

Blender Version
Broken: Blender 2.74 RC4
Long standing bug, at least since 2.72, probably earlier

Short description of error
If the bevel object is in a different scene from the curve path scene it won't automatically update beveled geometry

Exact steps for others to reproduce the error
If the bevel object is in a different scene from the curve path it won't automatically update beveled geometry

  • Default new scene (Scene 1)
  • Add new bezier curve 'A'
  • Create new scene (Scene 2) in same blend file
  • Change to 'Scene 2'
  • Add a new bezier curve 'B'
  • Add bezier curve 'A' from previous scene 'Scene 1' as bevel object
  • Go back to first scene 'Scene 1'
  • Enter edit mode in first bezier 'A'
  • Introduce any random transformation (move some vertex around)
  • Exit edit mode and return to second scene 'Scene 2' where curve 'A' is used as bevel object on curve 'B'

Second curve's 'B' bevel geometry is not updated, to reflect the changes in curve 'A's shape one must manually enter edit mode to force update.

Check demo file: lazy_curve_updating.blend

Curiously upon creating demo file I discovered that if the file is first opened on Scene 1, curve A is changed and Scene 2 is then opened for the first time after changing curve A's geometry, the generated mesh is correctly updated.

**System Information** Windows 7 64bits NVidia GTX 580 **Blender Version** Broken: Blender 2.74 RC4 Long standing bug, at least since 2.72, probably earlier **Short description of error** If the bevel object is in a different scene from the curve path scene it won't automatically update beveled geometry **Exact steps for others to reproduce the error** If the bevel object is in a different scene from the curve path it won't automatically update beveled geometry - Default new scene (Scene 1) - Add new bezier curve 'A' - Create new scene (Scene 2) in same blend file - Change to 'Scene 2' - Add a new bezier curve 'B' - Add bezier curve 'A' from previous scene 'Scene 1' as bevel object - Go back to first scene 'Scene 1' - Enter edit mode in first bezier 'A' - Introduce any random transformation (move some vertex around) - Exit edit mode and return to second scene 'Scene 2' where curve 'A' is used as bevel object on curve 'B' # Second curve's 'B' bevel geometry is not updated, to reflect the changes in curve 'A's shape one must manually enter edit mode to force update. Check demo file: [lazy_curve_updating.blend](https://archive.blender.org/developer/F156946/lazy_curve_updating.blend) Curiously upon creating demo file I discovered that if the file is first opened on Scene 1, curve A is changed and Scene 2 is then opened for the first time after changing curve A's geometry, the generated mesh is correctly updated.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @DuarteRamos

Added subscriber: @DuarteRamos

Added subscriber: @sindra1961

Added subscriber: @sindra1961

I think that the reason is the same as the following cases.
You make curve in separate layers one by one.
You set other curve in Bevel Object of one curve.
You choose only a layer of curve which you set in Bevel Object, and you edit curve.
As a result of having edited it, it is not reflected.
If you choose both layers and edit it, it is reflected.

I think that the reason is the same as the following cases. You make curve in separate layers one by one. You set other curve in Bevel Object of one curve. You choose only a layer of curve which you set in Bevel Object, and you edit curve. As a result of having edited it, it is not reflected. If you choose both layers and edit it, it is reflected.

True, I get that also in 2.72 32bits under Windows XP 64.
Now this is not a very concerning bug, just a small nuisance. It probably misses some sort of update flag or something, and this is probably done to improve performance by not updating or generating hidden geometry.

True, I get that also in 2.72 32bits under Windows XP 64. Now this is not a very concerning bug, just a small nuisance. It probably misses some sort of update flag or something, and this is probably done to improve performance by not updating or generating hidden geometry.

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Confirmed. A dependency issue for sure. I'm not sure we support chains between scenes though.

Confirmed. A dependency issue for sure. I'm not sure we support chains between scenes though.
Sergey Sharybin was assigned by Antonis Ryakiotakis 2015-04-02 13:08:01 +02:00

@DuarteRamos:
I did not write that this was bug to answer in the affirmative.
I intended to show that current blender did not support the method.
Because blender is a tool, there is an assembly operation to use it.
If you want to let you reflect a change result of the Bevel object, it will be reflected if you set object again.

@DuarteRamos: I did not write that this was bug to answer in the affirmative. I intended to show that current blender did not support the method. Because blender is a tool, there is an assembly operation to use it. If you want to let you reflect a change result of the Bevel object, it will be reflected if you set object again.

Hum I see, I assumed that if it updated automatically in most other situations than this was some sort of bug or missing some update flag.
If this was incorrectly assumed and this is not supported or just the expected behavior for these cases than I guess we can close the report.

Hum I see, I assumed that if it updated automatically in most other situations than this was some sort of bug or missing some update flag. If this was incorrectly assumed and this is not supported or just the expected behavior for these cases than I guess we can close the report.

@DuarteRamos:
I am not a developer of blender.
I am a user same as you.
Possibly their opinion may be different from my thing.

@DuarteRamos: I am not a developer of blender. I am a user same as you. Possibly their opinion may be different from my thing.

This issue was referenced by 2d05466700

This issue was referenced by 2d054667001602cd9b15046190e09167d7951d89

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2d05466700.

Closed by commit 2d05466700.

Added subscriber: @Sergey

Added subscriber: @Sergey

@Sergey:
I tried it in the latest edition, but nothing changes.
Is it right that what happens?

version 2.74 (sub 4), branch b'master', commit date b'2015-04-08' b'19:59', hash b'aa24704', b'Release'

@Sergey: I tried it in the latest edition, but nothing changes. Is it right that what happens? version 2.74 (sub 4), branch b'master', commit date b'2015-04-08' b'19:59', hash b'aa24704', b'Release'

I'm sorry, a way of the confirmation was wrong.
However, I have a question toward your correction.
I attach a file.
A result is reflected when I edit curve of different layer of different scene.
However, a result is not reflected even if I edit curve of different layer of same scene.
You set BezierCurve in beziel object of BezierCurve.001, and you edit it.
what.blend
Edit it without choosing layer at the same time.

I'm sorry, a way of the confirmation was wrong. However, I have a question toward your correction. I attach a file. A result is reflected when I edit curve of different layer of different scene. However, a result is not reflected even if I edit curve of different layer of same scene. You set BezierCurve in beziel object of BezierCurve.001, and you edit it. [what.blend](https://archive.blender.org/developer/F159998/what.blend) Edit it without choosing layer at the same time.

Does it not ignore the setting of object>Relations>Layers?

Does it not ignore the setting of object>Relations>Layers?

You currently need to have both scene visible (same as in original file you submitted), otherwise layer visibility optimization will prevent flush from happening. This is being addressed in the depsgraph_refactor branch.

You currently need to have both scene visible (same as in original file you submitted), otherwise layer visibility optimization will prevent flush from happening. This is being addressed in the depsgraph_refactor branch.

This comment was removed by @sindra1961

*This comment was removed by @sindra1961*

This comment was removed by @sindra1961

*This comment was removed by @sindra1961*

This comment was removed by @sindra1961

*This comment was removed by @sindra1961*

This comment was removed by @sindra1961

*This comment was removed by @sindra1961*

@Sergey:
My confirmation method seemed to be wrong.
I am sorry for making noise.

@Sergey: My confirmation method seemed to be wrong. I am sorry for making noise.

@Sergey:
I write only one having noticed.
I edit curve which I appointed in Bevel object, and the result is reflected by edit mode if I come back to original scene.
However, the result is not reflected when I come back to original scene after editing curve, and finishing edit mode.
It is written in the report that I come back to original scene after finishing edit mode.

@Sergey: I write only one having noticed. I edit curve which I appointed in Bevel object, and the result is reflected by edit mode if I come back to original scene. However, the result is not reflected when I come back to original scene after editing curve, and finishing edit mode. It is written in the report that I come back to original scene after finishing edit mode.

Edit mode is handled differently -- it does not really need to go via depsgraph update, because edit mode is displayed directly from the DNA. But if you'll have some modifiers applied on curve and enabled for edit mode then they might be displayed incorrectly after switching layers when editing the curve.

Edit mode is handled differently -- it does not really need to go via depsgraph update, because edit mode is displayed directly from the DNA. But if you'll have some modifiers applied on curve and enabled for edit mode then they might be displayed incorrectly after switching layers when editing the curve.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44213
No description provided.